# DirectorySort

./: .gitignore  CMakeLists.txt  README.md  default_config.json  main.cpp
DirectorySort/: .gitignore  CMakeLists.txt  default_config.json
DirectorySort/include/: ConfigParser.hpp  DirectorySort.hpp  DirectoryTypeConfig.hpp
DirectorySort/lib/Release/: DirectorySortLib.lib
DirectorySort/src/: ConfigParser.cpp  DirectorySort.cpp  DirectoryTypeConfig.cpp
